--- a/import.html
+++ b/import.html
@@ -5,19 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Import Data - ShiftPilot Pro</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/nav-inject.js"></script>
 </head>
 <body>
     <div class="app-container">
         <header class="app-header">
             <h1>Import Employee Data</h1>
-            <nav>
-                <a href="index.html" class="nav-link" id="nav-calendar">Calendar</a>
-                <a href="settings.html" class="nav-link" id="nav-settings">Settings</a>
-                <a href="import.html" class="nav-link" id="nav-import">Import Data</a>
-                <a href="reports.html" class="nav-link" id="nav-reports">Reports</a>
-                <a href="admin-panel.html" class="nav-link" id="admin-panel-link" style="display:none;">Admin Panel</a>
-                <button id="logout-btn" class="nav-link">Logout</button>
-            </nav>
+            <!-- Navigation is now injected via nav-inject.js -->
         </header>
 
         <main class="import-content">
@@ -66,11 +60,22 @@
                 </table>
                 <button id="save-imported-data-btn">Save Imported Data</button>
             </section>
+
+            <section class="import-section">
+                <h2>Google Drive Sync</h2>
+                <button id="gdrive-signin-btn">Sign in with Google</button>
+                <button id="gdrive-upload-btn">Upload Data to Google Drive</button>
+                <button id="gdrive-download-btn">Download Data from Google Drive</button>
+                <button id="gdrive-autosync-btn">Enable Auto Sync</button>
+                <p id="gdrive-status"></p>
+            </section>
         </main>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="js/seed-data-loader.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/gdrive-sync.js"></script>
     <script>
         $(document).ready(function() {
             // Check authentication on page load
@@ -81,17 +86,15 @@
             }
             // Show/hide admin panel link based on role
             if (currentUser.role === 'Super Admin') {
-                $('#admin-panel-link').show();
+                $("#admin-panel-link").show();
             }
-            // Highlight current page
-            const path = window.location.pathname.split('/').pop();
-            $(".nav-link").removeClass('active');
-            if (path.includes('index')) $('#nav-calendar').addClass('active');
-            if (path.includes('settings')) $('#nav-settings').addClass('active');
-            if (path.includes('import')) $('#nav-import').addClass('active');
-            if (path.includes('reports')) $('#nav-reports').addClass('active');
             // Logout button handler
             $('#logout-btn').on('click', function() { Auth.logout(); });
+
+            $('#gdrive-signin-btn').on('click', GDriveSync.signIn);
+            $('#gdrive-upload-btn').on('click', GDriveSync.uploadData);
+            $('#gdrive-download-btn').on('click', GDriveSync.downloadData);
+            $('#gdrive-autosync-btn').on('click', GDriveSync.autoSync);
         });
     </script>
 </body>
